--- a/posts/post-with-code/collagen_and_cartilage_joints_muscle_skin_outcomes.qmd
+++ b/posts/post-with-code/collagen_and_cartilage_joints_muscle_skin_outcomes.qmd
@@ -30,7 +30,7 @@ Let’s dive in, in no particular order I’ll be going over higher level meta a
 
     -   “investigate the effects of long-term daily collagen peptide (CP) supplementation on strength, musculotendinous adaptation, functional recovery, and body composition in healthy adults”
 
-    -   They used Standardized Mean Difference as the outcome measure. I maintain that most meta analyses nowadays shouldn’t be using it unless they can give a clear definition of the underlying construct that they’re trying to measure. The definition of the estimand for the meta analyses, is what leads to clear definitions of the construct used for the SMD. it’s a vital part of the process that most meta analyses using SMD don’t seem to do for whatever reason. SMD has almost no proper use case for a meta analysis these days and should only be used by a very very very experienced practitioner
+    -   The meta analysis authors used Standardized Mean Difference as the outcome measure. I maintain that most meta analyses nowadays shouldn’t be using it unless they can give a clear definition of the underlying construct that they’re trying to measure. The definition of the estimand for the meta analyses, is what leads to clear definitions of the construct used for the SMD. it’s a vital part of the process that most meta analyses using SMD don’t seem to do for whatever reason. SMD has almost no proper use case for a meta analysis these days and should only be used by a very very very experienced practitioner
 
     -   Why is the second criteria of the meta analyses inclusion criteria that “they used different forms of DC (dietary collagen)”? If they simply mean using a variety of collagen molecules but in similar proportions and dosages across studies, I have no problem. But I’m not sure based on the wording here.(To be fair, many of the trials stuck to 15g daily DC supplementation). 
 
