--- a/posts/post-with-code/collagen_and_cartilage_joints_muscle_skin_outcomes_refined_blog.qmd
+++ b/posts/post-with-code/collagen_and_cartilage_joints_muscle_skin_outcomes_refined_blog.qmd
@@ -10,30 +10,34 @@ image: "image.jpg"
 
 # My Foray into the World of Collagen
 
-I have to admit. something.\
+I have to admit something.\
 \
-Before doing the research for this article, I wasn't expecting to foray into the world of collagen much. As something which I wouldn't be really consuming until cultivated versions go on sale, I reserved it for something I really concern myself with. In fact, all the claims made by people online about collagen and skin had the thick musk of "just another untested supplement." \
+Before doing the research for this article, I wasn't expecting to dive into collagen much. It seemed like just another supplement raved about by random influencers online, which had the thick musk of "just another undertested supplement with little outcome data".\
 \
-Collagen seems to be highly touted for anything from joint health to skin health and basically everything in between involving a connective tissue. It all came to a head when a couple of different doctors started recommending I consume it too, so I challenged them to show me evidence. I also told them I would look into the issue personally as well to make this a collaborative effort, and I started digging.\
+From joint health to skin health and basically everything in between involving a connective tissue, there were lots of claims being made. And like most noise on social media about supplements, I chose to ignore it.
+
+When a couple of different doctors started recommending I consume it too, I was surprised it had made its way into the doctor's office. So, I challenged them to show me evidence. And though I still felt quite indifferent, it pushed me just enough in the direction of me doing my own searching, since if I was able to give nuanced takes on collagen and share them with those clinicians, it could directly impact other patient care as well for the better.\
 \
-But before that, I had a few important considerations for any trial evaluating collagen that I wanted to see fulfilled:
+And so the journey began. \
+\
+Going in, I had a few important considerations for any trial evaluating collagen that I wanted to see fulfilled:
 
-1.  Assessment and control for protein intake at baseline for all groups (especially in older adults). You would get many bonus points if you ensured an slightly higher protein intake of at least 1.2g/kg lean mass in an isonitrogenic fashion between both arms. Given that collagen obviously contributes to our amino acid pool when it’s digested, and the generally well known benefits on sufficient total protein intake for bone, muscle, and connective tissue health, this seemed like a very important consideration. 
+-   [ ] Assessment and control for protein intake at baseline for all groups (especially in older adults). You would get many bonus points if you ensured an slightly higher protein intake of at least 1.2g/kg lean mass in an isonitrogenic fashion between control and treatment arms. Given that collagen obviously contributes to our amino acid pool when it’s digested, and the generally well known benefits on sufficient total protein intake for bone, muscle, and connective tissue health, this seemed like a very important consideration to me. 
 
-2.  Consistent dosages of the same molecules and consistent length of supplementation. This allows for a better understanding of what dose, collagen type, and exposure time length we can have benefits from if they are to be had.
+-   [ ] Consistent dosages of the same molecules and consistent length of supplementation. This allows for a better understanding of what dose, collagen type, and exposure time length we can obtain benefits from if they are to be had.
 
-3.  Either the collagen is a standalone intervention and compared to a placebo that’s isonitrogenic, or have the treatment assignments be something like 
+-   [ ] Either the collagen is a standalone intervention and compared to a placebo that’s isonitrogenic, or have the treatment assignments be something like the following:
 
-| Treatment            | Control         |
-|----------------------|-----------------|
-| Hydrolyzed Collagen  | Hyaluronic Acid |
-| Hyaluronic Acid      | Glucosamine     |
-| Glucosamine          | Condroiton      |
-| Condroiton           |                 |
+| Treatment           | Control         |
+|---------------------|-----------------|
+| Hydrolyzed Collagen | Hyaluronic Acid |
+| Hyaluronic Acid     | Glucosamine     |
+| Glucosamine         | Condroiton      |
+| Condroiton          |                 |
 
-Where the only difference between treatment and control is the collagen supplement.
+Where the only difference between treatment and control is the collagen supplement, but some standard of care treatment is included.
 
-Let’s dive in, in no particular order I’ll be going over higher level meta analyses and systemic reviews and working my way down into commenting on individual trials.
+With those ground rules set, I'd like to present my synthesis on collagen's outcome data for various endpoints. In no particular order I’ll be going over higher level meta analyses and systemic reviews and working my way down into commenting on individual trials cited in these reviews.
 
 ## Systematic Reviews and Meta Analysis
 
@@ -54,77 +58,73 @@ Let’s dive in, in no particular order I’ll be going over higher level meta a
 
 \- ![](https://lh7-rt.googleusercontent.com/docsz/AD_4nXd2IOP3dffygozuhiOkMJUnEpPkcrosPwFuqBfgn6h2TvS33gU4ri8gr-X1PIJCeehJU9nZJlJXNyc2vN3QOfFZI9o05mzeRY4wtRwG_7k652o64fu3DalIE01pXokm8a60tQjjfQleUeerMHqTv9E0xd7j?key=rf44RV7tAsqSBFC_Mo--og)
 
-### The literal definition of what not to do with a forest plot. Why even put different lifts with each other in the same forest plot when you could make another one? This entire paper is best ignored. 
+::: callout-caution
+The literal definition of what not to do in a forest plot, right there. This entire paper is just best ignored at this point.
+:::
 
--   [Found a letter to the editor from a statistician on a supplemental collagen meta analysis done for osteoarthritis outcomes (using the VAS as the main outcome)](https://link.springer.com/epdf/10.1007/s00264-021-05239-3?sharing_token=nZQH2bjn8aRXz2kjvgXdSPe4RwlQNchNByi7wbcMAY7YkNDWBxBnTEnalNaIMriEIQ-pN-PQiuDpXtYmMoYH80QT-utrlaH0mkJ8Ts3rC6AtDefWZTW_Gc17Eim_ydFe6GmJySmqrGTOQU5TgvYTB_OBtiQzd_lnhpMUbs9HeOM%3D) 
+[Found a letter to the editor from a statistician on a supplemental collagen meta analysis done for osteoarthritis outcomes (using the VAS as the main outcome)](https://link.springer.com/epdf/10.1007/s00264-021-05239-3?sharing_token=nZQH2bjn8aRXz2kjvgXdSPe4RwlQNchNByi7wbcMAY7YkNDWBxBnTEnalNaIMriEIQ-pN-PQiuDpXtYmMoYH80QT-utrlaH0mkJ8Ts3rC6AtDefWZTW_Gc17Eim_ydFe6GmJySmqrGTOQU5TgvYTB_OBtiQzd_lnhpMUbs9HeOM%3D) 
 
-    -   I’m noting this because he succinctly commentates on some of the issues I’m observing with this literature.
+-   I’m noting this because he succinctly commentates on some of the issues I’m observing with this literature.
 
-    -   To his point about financial biases: Unlike him, I want to note I personally don’t really care about who funded a study. As long as the results are analytically valid and study design is sound I have no problems who funded it, as they’d be valid independent of funding. Typically if there are nefarious things at play from the financial bias of the funders then they show up in study design, methods, and interpretations and you can criticize the study on the merit of those
+-   To his point about financial biases: Unlike him, I want to note I personally don’t really care about who funded a study. As long as the results are analytically valid and study design is sound I have no problems who funded it, as they’d be valid independent of funding. Typically if there are nefarious things at play from the financial bias of the funders then they show up in study design, methods, and interpretations and you can criticize the study on the merit of those
 
-    -   He notes problems in this meta analysis around inconsistent dosage, effect sizes, possible publication bias,length of usage and actual clinical significance which are all very very fair criticisms and ones I agree with. This is unfortunately a theme we’ll see going throughout today….. 
+-   He notes problems in this meta analysis around inconsistent dosage, effect sizes, possible publication bias,length of usage and actual clinical significance which are all very very fair criticisms and ones I agree with. This is unfortunately a theme we’ll see going throughout today….. 
 
-    We do happen to have a couple of Systematic Reviews on the topic of supplementary collagen for cartilages, joints and muscles! Great!! Let’s read further…..
+We do happen to have a couple of Systematic Reviews on the topic of supplementary collagen for cartilages, joints and muscles! Great!! Let’s read further…..
 
-    [Role of Collagen Derivatives in Osteoarthritis and Cartilage Repair: A Systematic Scoping Review With Evidence Mapping](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7695755/)
+[Role of Collagen Derivatives in Osteoarthritis and Cartilage Repair: A Systematic Scoping Review With Evidence Mapping](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7695755/)
 
-    -   Oh dear god, these didn't list baseline protein intakes of people in the study in the review (making me have to go through each trial to find if they did) 
+-   Oh dear god, these didn't list baseline protein intakes of people in the study in the review (making me have to go through each trial to find if they did) 
 
-        -   Therefore I hate my life and these researchers I hate even more 
+    -   Therefore I hate my life and these researchers I hate even more 
 
-        -   At a glance, wildly varying doses of collagen, different molecular weights, whether it's hydrolyzed, varying trial lengths
+    -   At a glance, wildly varying doses of collagen, different molecular weights, whether it's hydrolyzed, varying trial lengths
 
-        -   Also for some reason smaller studies seem to consistently show higher effect sizes  than larger ones
+    -   Also for some reason smaller studies seem to consistently show higher effect sizes  than larger ones
 
-    Let’s dive into some of these studies individually on the next page…..
+Let’s dive into some of these studies individually on the next page…..
 
-    [The effects of collagen peptide supplementation on body composition, collagen synthesis, and recovery from joint injury and exercise: a systematic review](https://link.springer.com/article/10.1007/s00726-021-03072-x)
+[The effects of collagen peptide supplementation on body composition, collagen synthesis, and recovery from joint injury and exercise: a systematic review](https://link.springer.com/article/10.1007/s00726-021-03072-x)
 
-    <div>
+-   Only two studies had a placebo that matched total protein in the placebo. Again…..why would you do something like this?
 
-    -   Only two studies had a placebo that matched total protein in the placebo. Again…..why would you do something like this?
+-   And both of those that did have a comparable protein placebo they measured the surrogate outcome MPS, instead of hard outcomes like body composition or joint pain, cartilage size/thickness, etc. So….not really interesting or useful \*sigh\*
 
-        -   And both of those that did have a comparable protein placebo they measured the surrogate outcome MPS, instead of hard outcomes like body composition or joint pain, cartilage size/thickness, etc. So….not really interesting or useful \*sigh\*
+-   Do I even want to bother with looking at the randomization + power analyses for both of these….I know I’m not going to be happy at a glance. Let’s spare myself the mental burden
 
-        -   Do I even want to bother with looking at the randomization + power analyses for both of these….I know I’m not going to be happy at a glance. Let’s spare myself the mental burden
+-   Here’s a trial from where it’s unclear whether the difference in VAS is clinically significant (\< 10): <https://cdnsciencepub.com/doi/10.1139/apnm-2016-0390>
 
-    -   Here’s a trial from where it’s unclear whether the difference in VAS is clinically significant (\< 10): <https://cdnsciencepub.com/doi/10.1139/apnm-2016-0390>
+-   Again, no assessment of baseline protein intake nor were the treatment and control protein matched. So………..we move on
 
-        -   Again, no assessment of baseline protein intake nor were the treatment and control protein matched. So………..we move on
+[Effects of Oral Collagen on Skin Aging Parameters](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10180699/)
 
-    </div>
+-   \*Sigh\* Yet another meta analysis that used SMD improperly. They did have a meta analyst specialist on this meta so they did a good job with many things, but still have to ding points for SMD.
 
-    [Effects of Oral Collagen on Skin Aging Parameters](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10180699/)
+-   The forest plots at least do a good job of separating time points and other things into relevant subgroup analyses. Though I think they probably fiddled around too much and need to limit the scope of their analysis….but that’s probably a more mild criticism in today’s climate of meta analyses \*sigh\*
 
-    -   \*Sigh\* Yet another meta analysis that used SMD improperly. They did have a meta analyst specialist on this meta so they did a good job with many things, but still have to ding points for SMD.
+-   Important to note that this meta was mainly in older woman between 35 - 60 years of age.
 
-    -   The forest plots at least do a good job of separating time points and other things into relevant subgroup analyses. Though I think they probably fiddled around too much and need to limit the scope of their analysis….but that’s probably a more mild criticism in today’s climate of meta analyses \*sigh\*
-
-    -   Important to note that this meta was mainly in older woman between 35 - 60 years of age.
-
-    -   On the forest plot’s face value, it seems collagen is pretty consistently positive associated with most skin aging metrics here. That said when the metric is SMD it’s hard to interpret what the outcome even means. It gets worse….
+-   On the forest plot’s face value, it seems collagen is pretty consistently positive associated with most skin aging metrics here. That said when the metric is SMD it’s hard to interpret what the outcome even means. It gets worse….
 
 -   ![](https://lh7-rt.googleusercontent.com/docsz/AD_4nXfeRmLAtTSFkBLwKvx6h4KRhq-A7fcIrbZVgdUAnuo30VWvjrxw-l_PpWjGd5cNKKM_Y_dpAryblqRCqb8p1Iyyzz2g7MGyCHgGj9hyTO0L5MCM9HVzCzYZW2_56hYQMwMW0U6ZOknlv5rfDKWiG6xpSu9B?key=rf44RV7tAsqSBFC_Mo--og)
 
-    -   So many heterogenous interventions with respect to dose and type of collagen. 
+-   So many heterogenous interventions with respect to dose and type of collagen. 
 
-    -   This is also an example from one of the trials:
+-   This is also an example from one of the trials:
 
-        -   ![](https://lh7-rt.googleusercontent.com/docsz/AD_4nXeAydvDeqAQTQISHrAszmbbgUyFQgFVhLzI4HmxPiL6IwPT4obbHimf-siUE8ZJQB2498AJK_drpcjuvv-TiwVp-BxZlFO8SQ70HiqJ28p1YsBsV72OXnJwu-_1l8zN4nTqfDKMshcNDpaLvoae28l4TdA2?key=rf44RV7tAsqSBFC_Mo--og)
+-   ![](https://lh7-rt.googleusercontent.com/docsz/AD_4nXeAydvDeqAQTQISHrAszmbbgUyFQgFVhLzI4HmxPiL6IwPT4obbHimf-siUE8ZJQB2498AJK_drpcjuvv-TiwVp-BxZlFO8SQ70HiqJ28p1YsBsV72OXnJwu-_1l8zN4nTqfDKMshcNDpaLvoae28l4TdA2?key=rf44RV7tAsqSBFC_Mo--og)
 
-            -   On top of the standard criticism of not matching for protein in the placebo nor having any evaluation of baseline dietary protein intake…….The intervention isn’t even just collagen ALONE but a host of different things. How can we know the unique total protein independent content effect of collagen when you have all these other things?
+    -   On top of the standard criticism of not matching for protein in the placebo nor having any evaluation of baseline dietary protein intake…….The intervention isn’t even just collagen ALONE but a host of different things. How can we know the unique total protein independent content effect of collagen when you have all these other things?
 
-            -   Yet another [study](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8707759/) from this meta that didn’t protein match in the placebo nor give baseline protein intakes. They also didn’t use ANCOVA, or change scores even to analyze. Plus testing variables at baseline…..rookies ![](https://lh7-rt.googleusercontent.com/docsz/AD_4nXfRod5Jk9p4b2IQFeGogaygJ8lKIvMtmh47dkF_rf1-XmpZOaMsp9Co-7tjIFa5neXK17OgIGR_eHl9fPqJWn2FUGSBLODcC7DFfOvJKJxgZ8T8OGVVgbBIc9POfbKuEAtsYBPzrRnpCkxR9BtQfaVNxgw?key=rf44RV7tAsqSBFC_Mo--og)
+-   Yet another [study](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8707759/) from this meta that didn’t protein match in the placebo nor give baseline protein intakes. They also didn’t use ANCOVA, or change scores even to analyze. Plus testing variables at baseline…..rookies ![](https://lh7-rt.googleusercontent.com/docsz/AD_4nXfRod5Jk9p4b2IQFeGogaygJ8lKIvMtmh47dkF_rf1-XmpZOaMsp9Co-7tjIFa5neXK17OgIGR_eHl9fPqJWn2FUGSBLODcC7DFfOvJKJxgZ8T8OGVVgbBIc9POfbKuEAtsYBPzrRnpCkxR9BtQfaVNxgw?key=rf44RV7tAsqSBFC_Mo--og)
 
-                -   
+-   ![](https://lh7-rt.googleusercontent.com/docsz/AD_4nXdyFmXWfhmGFlorebqGTewi6J7i9SHM65BONOMonsZl5PQ0R5x0c5ZrFKTr-vVZAB4iH1VnY2S16UO8ogaU0YG5wZyc-iZzU9BHaX7M6vX0edOTE3mnE8unDB8-57VNJUD2fTrRJ-Ke0mVOwoRS986JKR4?key=rf44RV7tAsqSBFC_Mo--og)
 
-        -   ![](https://lh7-rt.googleusercontent.com/docsz/AD_4nXdyFmXWfhmGFlorebqGTewi6J7i9SHM65BONOMonsZl5PQ0R5x0c5ZrFKTr-vVZAB4iH1VnY2S16UO8ogaU0YG5wZyc-iZzU9BHaX7M6vX0edOTE3mnE8unDB8-57VNJUD2fTrRJ-Ke0mVOwoRS986JKR4?key=rf44RV7tAsqSBFC_Mo--og)
+    -   Another example [of a trial](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8176521/) from this meta that didn’t use a protein controlled placebo or assessed protein intake at baseline. Which is sad because this trial did a better job of explaining their randomization protocols and power analysis better than most!! (only thing missing was explaining their minimum effect size clearly)
 
-            -   Another example [of a trial](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8176521/) from this meta that didn’t use a protein controlled placebo or assessed protein intake at baseline. Which is sad because this trial did a better job of explaining their randomization protocols and power analysis better than most!! (only thing missing was explaining their minimum effect size clearly)
+-   They did do subgroup analyses for the source of the collagen (what animal) and for supplementation length and different outcomes….but it’s hard to make super robust conclusions here. Especially given their lack of accounting for protein intake and placebo protein control. But if you had to make me flip a coin, I might lean slightly in favor of collagen being beneficial for skin aging markers. But barely so.
 
-        -   They did do subgroup analyses for the source of the collagen (what animal) and for supplementation length and different outcomes….but it’s hard to make super robust conclusions here. Especially given their lack of accounting for protein intake and placebo protein control. But if you had to make me flip a coin, I might lean slightly in favor of collagen being beneficial for skin aging markers. But barely so.
-
-    -   Overall if there’s a possible benefit to be had from collagen, the strongest evidence is in skin it seems.  But there are still some But I’m not as equipped to evaluate inclusion criteria in these studies, as well as knowing what clinical significance is for a lot of these metrics. I’ll probably consult with a derm friend.
+-   Overall if there’s a possible benefit to be had from collagen, the strongest evidence is in skin it seems.  But there are still some But I’m not as equipped to evaluate inclusion criteria in these studies, as well as knowing what clinical significance is for a lot of these metrics. I’ll probably consult with a derm friend.
 
 ## A look at Individual Studies from the Systematic Reviews Above
 
