Changed blog title and personal name, tried to recreate meta analysis but it was not worth the effort so I gave up *sigh*

--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Makarand Nadendla: Stats God"
+title: "Biostatistics and Causal Inference"
 listing:
   contents: posts
   sort: "date desc"
