--- a/posts/post-with-code/collagen_outcomes/collagen_and_cartilage_joints_muscle_skin_outcomes_refined_blog.qmd
+++ b/posts/post-with-code/collagen_outcomes/collagen_and_cartilage_joints_muscle_skin_outcomes_refined_blog.qmd
@@ -57,9 +57,22 @@ With those ground rules set, I'd like to present my synthesis on collagen's outc
 
 \- ![](https://lh7-rt.googleusercontent.com/docsz/AD_4nXd2IOP3dffygozuhiOkMJUnEpPkcrosPwFuqBfgn6h2TvS33gU4ri8gr-X1PIJCeehJU9nZJlJXNyc2vN3QOfFZI9o05mzeRY4wtRwG_7k652o64fu3DalIE01pXokm8a60tQjjfQleUeerMHqTv9E0xd7j?key=rf44RV7tAsqSBFC_Mo--og)
 
-::: callout-caution
-The literal definition of what not to do in a forest plot, right there. This entire paper is just best ignored at this point.
-:::
+**The literal definition of what not to do in a forest plot, right there. This entire paper is just best ignored at this point.**
+
+For fun, I tried to see if I can even replicate the above forest plot with the details they gave, but I decided it was too much effort when even the n they reported for the Oertzen study in the forest plot (91) didn't match with the actual n reported:
+
+```{r echo=FALSE}
+#library(tidyverse)
+#library(here)
+
+# initiate a tibble to be used in a meta analysis for SMD with continuous outcomes
+#silly_sports_smd_meta_df <- as.tibble(read.csv(here("posts", "posts-with-code", "collagen_outcomes", "silly_smd_muscle_meta.csv")))
+
+#silly_sports_smd_meta <- 
+#forest(silly_sports_smd_meta)
+```
+
+\
 
 [Found a letter to the editor from a statistician on a supplemental collagen meta analysis done for osteoarthritis outcomes (using the VAS as the main outcome)](https://link.springer.com/epdf/10.1007/s00264-021-05239-3?sharing_token=nZQH2bjn8aRXz2kjvgXdSPe4RwlQNchNByi7wbcMAY7YkNDWBxBnTEnalNaIMriEIQ-pN-PQiuDpXtYmMoYH80QT-utrlaH0mkJ8Ts3rC6AtDefWZTW_Gc17Eim_ydFe6GmJySmqrGTOQU5TgvYTB_OBtiQzd_lnhpMUbs9HeOM%3D) 
 
@@ -87,7 +100,7 @@ Let’s dive into some of these studies individually on the next page…..
 
 -   Only two studies had a placebo that matched total protein in the placebo. Again…..why would you do something like this?
 
--   And both of those that did have a comparable protein placebo they measured the surrogate outcome MPS, instead of hard outcomes like body composition or joint pain, cartilage size/thickness, etc. So….not really interesting or useful \*sigh\*
+-   And both of those that did have a comparable protein placebo they measured the surrogate outcome MPS, instead of hard outcomes like body composition or joint pain, cartilage size/thickness, etc. So….not really interesting or useful *sigh*
 
 -   Do I even want to bother with looking at the randomization + power analyses for both of these….I know I’m not going to be happy at a glance. Let’s spare myself the mental burden
 
@@ -97,17 +110,17 @@ Let’s dive into some of these studies individually on the next page…..
 
 [Effects of Oral Collagen on Skin Aging Parameters](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10180699/)
 
--   \*Sigh\* Yet another meta analysis that used SMD improperly. They did have a meta analyst specialist on this meta so they did a good job with many things, but still have to ding points for SMD.
+-   *Sigh* Yet another meta analysis that used SMD improperly. They did have a meta analyst specialist on this meta so they did a good job with many things, but still have to ding points for SMD.
 
--   The forest plots at least do a good job of separating time points and other things into relevant subgroup analyses. Though I think they probably fiddled around too much and need to limit the scope of their analysis….but that’s probably a more mild criticism in today’s climate of meta analyses \*sigh\*
+-   The forest plots at least do a good job of separating time points and other things into relevant subgroup analyses. Though I think they probably fiddled around too much and need to limit the scope of their analysis….but that’s probably a more mild criticism in today’s climate of meta analyses. 🙃
 
--   Important to note that this meta was mainly in older woman between 35 - 60 years of age.
+-   Important to note that this meta was situated on trials that focused mainly in older woman between 35 - 60 years of age.
 
 -   On the forest plot’s face value, it seems collagen is pretty consistently positive associated with most skin aging metrics here. That said when the metric is SMD it’s hard to interpret what the outcome even means. It gets worse….
 
 -   ![](https://lh7-rt.googleusercontent.com/docsz/AD_4nXfeRmLAtTSFkBLwKvx6h4KRhq-A7fcIrbZVgdUAnuo30VWvjrxw-l_PpWjGd5cNKKM_Y_dpAryblqRCqb8p1Iyyzz2g7MGyCHgGj9hyTO0L5MCM9HVzCzYZW2_56hYQMwMW0U6ZOknlv5rfDKWiG6xpSu9B?key=rf44RV7tAsqSBFC_Mo--og)
 
--   So many heterogenous interventions with respect to dose and type of collagen. 
+    -   So many heterogenous interventions with respect to dose and type of collagen. 
 
 -   This is also an example from one of the trials:
 
@@ -115,7 +128,7 @@ Let’s dive into some of these studies individually on the next page…..
 
     -   On top of the standard criticism of not matching for protein in the placebo nor having any evaluation of baseline dietary protein intake…….The intervention isn’t even just collagen ALONE but a host of different things. How can we know the unique total protein independent content effect of collagen when you have all these other things?
 
--   Yet another [study](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8707759/) from this meta that didn’t protein match in the placebo nor give baseline protein intakes. They also didn’t use ANCOVA, or change scores even to analyze. Plus testing variables at baseline…..rookies ![](https://lh7-rt.googleusercontent.com/docsz/AD_4nXfRod5Jk9p4b2IQFeGogaygJ8lKIvMtmh47dkF_rf1-XmpZOaMsp9Co-7tjIFa5neXK17OgIGR_eHl9fPqJWn2FUGSBLODcC7DFfOvJKJxgZ8T8OGVVgbBIc9POfbKuEAtsYBPzrRnpCkxR9BtQfaVNxgw?key=rf44RV7tAsqSBFC_Mo--og)
+-   Yet another [study](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8707759/) from this meta that didn’t protein match in the placebo nor give baseline protein intakes. They also didn’t use ANCOVA, or change scores even to analyze. Plus significance testing variables at baseline…..noobs ![](https://lh7-rt.googleusercontent.com/docsz/AD_4nXfRod5Jk9p4b2IQFeGogaygJ8lKIvMtmh47dkF_rf1-XmpZOaMsp9Co-7tjIFa5neXK17OgIGR_eHl9fPqJWn2FUGSBLODcC7DFfOvJKJxgZ8T8OGVVgbBIc9POfbKuEAtsYBPzrRnpCkxR9BtQfaVNxgw?key=rf44RV7tAsqSBFC_Mo--og)
 
 -   ![](https://lh7-rt.googleusercontent.com/docsz/AD_4nXdyFmXWfhmGFlorebqGTewi6J7i9SHM65BONOMonsZl5PQ0R5x0c5ZrFKTr-vVZAB4iH1VnY2S16UO8ogaU0YG5wZyc-iZzU9BHaX7M6vX0edOTE3mnE8unDB8-57VNJUD2fTrRJ-Ke0mVOwoRS986JKR4?key=rf44RV7tAsqSBFC_Mo--og)
 
@@ -123,13 +136,13 @@ Let’s dive into some of these studies individually on the next page…..
 
 -   They did do subgroup analyses for the source of the collagen (what animal) and for supplementation length and different outcomes….but it’s hard to make super robust conclusions here. Especially given their lack of accounting for protein intake and placebo protein control. But if you had to make me flip a coin, I might lean slightly in favor of collagen being beneficial for skin aging markers. But barely so.
 
--   Overall if there’s a possible benefit to be had from collagen, the strongest evidence is in skin it seems.  But there are still some But I’m not as equipped to evaluate inclusion criteria in these studies, as well as knowing what clinical significance is for a lot of these metrics. I’ll probably consult with a derm friend.
+Overall if there’s a possible benefit to be had from collagen, the strongest evidence is in skin it seems. But there are still some But I’m not as equipped to evaluate inclusion criteria in these studies, as well as knowing what clinical significance is for a lot of these metrics. I’ll do best consulting a researcher that is more familiar with skin.
 
 # A Closer Look at Individual Studies
 
 [Whey protein vs leucine matched collagen protein RCT](https://journals.humankinetics.com/view/journals/ijsnem/32/3/article-p133.xml)
 
--   This is a paper from the above muscle health meta, but SciHub doesn’t have access unfortunately :(. If I’m to believe just their results without looking at the methods then at least for muscle size whey protein does better than leucine matched collagen. Though I’m sure I’d have problems with this trial if I actually read it hahahaha
+-   This is a paper from the above muscle health meta, but SciHub doesn’t have access unfortunately :(. If I’m to believe just their results without looking at the methods then at least for muscle size whey protein does better than leucine matched collagen. Though I’m sure I’d have problems with this trial if I actually read it 😅
 
 [Skin Health + Elasticity with a (collagen + hyaluronic acid +other molecules) supplement l](https://www.semanticscholar.org/paper/03d97f8de417e402f6ab17d1d3546dae74462aae)
 
@@ -189,7 +202,7 @@ Yes, glancing at these other trials, I’ve lost pretty much all faith that any 
 
 Update: My friend has informed me that there’s actually some decent evidence for isolated glycine (one of the primary amino acid constituents of collagen, along with proline and isoproline) for various endpoints. I’ll let him fetch some evidence on that and that could maybe offer any unique benefits of collagen if they are to be had for far cheaper. We shall see.
 
-At present, it’s not clear collagen is good for much beyond the protein content (except for maybe skin aging if you’re a older woman with skin aging?), and I’d just recommend getting enough protein (daily 1.2 g protein/kg lean body mass, up to 1.6g/kg daily for older adults). Getting the total protein intake to at least 1g/kg lean mass is broadly important for overall health.\
+At present, it’s not clear collagen is good for much beyond the protein content (except for maybe skin aging if you’re a older woman with skin aging?), and I’d just recommend getting enough protein (daily 1.2 g protein/kg lean body mass, if being conservative up to 1.6g/kg daily for older adults). Getting the total protein intake to at least 1g/kg lean mass is broadly important for overall health.\
 \
 If you find 1.2g/kg hard, protein supplements are an excellent way to get up to that number, and using plain soy protein isolate for example is much more versatile than people think. Protein rich legumes like soy and lupini beans are great. Soy itself is very versatile as high protein options like tofu, tempeh, and TVP exist. Seitan is a real showstopper as well, since the protein to calorie ratio is off the charts and it is usually quite cheap to buy and store in bulk. There are lots of creative ways to up protein intake, and really going from 0.6 g/kg protein to 1g/kg protein goes such a long way. Don't stress out over going above and beyond in protein intake, if it's causing stress and is leading to a less palatable diet. You've done most of the work by getting to 1g protein/kg lean mass.\
 \
